removed old unecessary code + fixed heights and spacings

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -19,7 +19,6 @@ $img-border-radius: 35px;
 // color variables
 $rosa: #ff0266;
 $pink:#cc5490;
-$grey: #2c3e50;
 $light-grey: #EEF2F7;
 $black: #000;
 $white: #fff;
